--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ WS_PORT=80
 REDIS_HOST=redis
 REDIS_PORT=6379
 LARAVEL_API_URL=http://laravel
+SENTRY_DSN=https://f2a04f0f0e2d968872a97c5ec063108d@o4510364090564608.ingest.us.sentry.io/4510375660486656
