--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Félix Lanouette",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^10.25.0",
     "dotenv": "^16.4.5",
     "ioredis": "^5.8.0",
     "node-fetch": "^3.3.2",
