--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 LARAVEL_API_URL=http://laravel
 SENTRY_DSN=
+SENTRY_RELEASE=chatmii-websocket@1s.1.0
+NODE_ENV=development
